--- a/platform-ui-skin/src/main/webapp/skin/less/social/skin/social.less
+++ b/platform-ui-skin/src/main/webapp/skin/less/social/skin/social.less
@@ -201,7 +201,7 @@
 
 .uiUserInvitation {
 	.mention-input {
-		margin-right: 2px;
+		margin-right: 5px;
 	}
 
 	.btn {
